metadata/force-app/main/default/objects/CustomName_kvosJ__c/CustomName_kvosJ__c.object-meta.xml
<CustomObject>
    <description>Description_UfKME</description>
    <label>CustomLabel_XpOne</label>
    <nameField>
        <label>CustomLabel_XpOne</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_XpOnes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>