metadata/force-app/main/default/objects/CustomName_kvosJ__c/fields/CustomField_JEYkL__c.field-meta.xml
<CustomField>
    <fullName>CustomField_JEYkL__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldGNfVU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>